# profiling

./: LICENSE  README.md  profile.sh  pyproject.toml  rapl_install.sh  requirements.txt
node/: app.js
results/cpu/pyinstrument/: compress.html
results/cpu/scalene/: profile.json
results/cpu/scalene/decompress/: profile.html
results/gpu/: emissions.csv
results/gpu/impact_tracker/: info.pkl
results/lxplus/gpu/: pyJoules_total_energy_result_1.csv  pyJoules_total_energy_result_100.csv  pyJoules_total_energy_result_1000.csv
results/lxplus/gpu/codecarbon/: compression_code_carbon.csv  decompression_code_carbon.csv  emissions.csv  info_code_carbon.csv  plotting_code_carbon.csv  train_code_carbon.csv
results/lxplus/gpu/eco2ai/: emission.csv  make_plots.ipynb
results/lxplus/gpu/pyJoule/: pyJoules_total_energy_result_75.csv
results/m1/cpu/powermetrics/logs/: emissions.csv  log.txt
results/m1/cpu/pyinstrument/: decompress.html
results/m1/cpu/scalene/: emissions.csv
results/m1/cpu/scalene/compress/: profile.html  profile.json
results/m1/cpu/scalene/decompress/: output.pstats
results/m1/gpu/: cProfile_train_gpu.prof  cProfile_train_gpu_100e.prof  cProfile_train_gpu_10e.prof
