[tool.poetry]
name = "profiler"
version = "1.1.0"
description = "framework aims to utilise the collection of various tools and libraries for energy cost estimation and profiling"
authors = ["Leonid Didukh <ledidukh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pyJoules="0.2.0"
viztracer="0.15.6"
snakeviz="2.2.0"
py-spy="0.1.0"
pprofile="2.1.0"
yappi="1.4.0"
austin-python="1.5.0"
scalene="1.5.21.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
